<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#260066B2"
    android:backgroundTint="#260066B2"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/backPhotoOfDayLL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="#260066B2"
        android:orientation="vertical">
        >

        <Toolbar
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="#0066B2"
            android:backgroundTint="#0066B2" >


        </Toolbar>

        <ImageView
            android:id="@+id/loadedIV"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:orientation="vertical">
            >

            <EditText
                android:id="@+id/yearBtn"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/year"
                android:textColor="#61000000" />

            <EditText
                android:id="@+id/monthBtm"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/month"
                android:textColor="#61000000" />

            <EditText
                android:id="@+id/dayBtn"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/day"
                android:textColor="#61000000" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="110dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/loadBtn"
                android:text="@string/loadPhoto"
                style="@style/buttons"
                />

            <Button
                android:id="@+id/saveBtn"
                android:text="@string/savePhoto"
                style="@style/buttons"
                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>