<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageIV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/background" />

    <LinearLayout
        android:id="@+id/editTextLL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/nasapicIV"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/nasapicIV"
            android:layout_width="194dp"
            android:layout_height="154dp"
            app:srcCompat="@drawable/nasa_icon_1" />

        <RelativeLayout
            android:id="@+id/buttonsRL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/buttonsLL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:orientation="vertical"
                android:layout_marginTop="15dp"
                >

                <Button
                    android:id="@+id/photoOfDayBtn"
                    android:layout_width="160dp"
                    style="@style/buttons"
                    android:text="@string/photoOfDay"
                    />

                <Button
                    android:id="@+id/galleyBtn"
                    android:layout_width="160dp"
                    style="@style/buttons"
                    android:text="@string/galley"
                    />

                <Button
                    android:id="@+id/photoBtn"
                    android:layout_width="160dp"
                    style="@style/buttons"
                    android:text="@string/photoFromSatellite"
                    />

                <Button
                    android:id="@+id/exitBtn"
                    android:layout_width="160dp"
                    style="@style/buttons"
                    android:text="@string/exit"
                    />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>


</RelativeLayout>